kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: simple-bank-api-service
spec:
  selector:
    app: simple-bank-api
  ports:
  - protocol: TCP
    port: 80
    targetPort: http-server
    name: http-service
  - protocol: TCP
    port: 90
    targetPort: grpc-server
    name: grpc-service
  - protocol: TCP
    port: 81
    targetPort: gin-server
    name: gin-service
  type: LoadBalancer
