kubernetes/ingress-grpc.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: simple-bank-ingress-grpc
  annotations:
    cert-manager.io/cluster-issue: letsencrypt
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/backend-protocol: "GRPC"      
spec:
  ingressClassName: nginx
  rules:
  - host: "gapi.simplebank.com"
    http:
      paths:
      - path: "/"
        pathType: Prefix
        backend:
          service:
            name: simple-bank-api-service
            port:
              number: 90
  tls:
  - hosts:
    - gapi.simplebank.com
    secretName: simple-bank-gapi-cert
